# pyvista-manifold

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cspell.json  justfile  pyproject.toml
.github/workflows/: ci.yml
assets/: render_hero.py
examples/: showcase.ipynb
pyvista_manifold/: __init__.py  _accessor.py  _conversion.py  _factory.py
tests/: conftest.py  test_accessor.py  test_conversion.py  test_factory.py  test_image_regression.py
